# zabbix-new

./: .gitignore  ChangeLog  Makefile.am  build-backend.xml  configure.ac
conf/: zabbix_server.conf
create/src/: dashboards.tmpl  data.tmpl
frontends/php/: geomaptile.php  index.php  jsLoader.php  populate.php
frontends/php/include/: defines.inc.php
frontends/php/js/: class.leaflet-zbx.js  menupopup.js
include/: cfg.h  common.h  dbcache.h  export.h  log.h  modbtype.h  mutexs.h  preproc.h  proxy.h  sysinfo.h  zbxalgo.h  zbxavailability.h  zbxcacheconfig.h  zbxcachehistory.h  zbxcommon.h  zbxcomms.h  zbxdb.h  zbxdbhigh.h  zbxmonitor.h  zbxpreproc.h  zbxrtc.h  zbxserver.h  zbxsysinfo.h  zbxtypes.h
include/audit/: zbxaudit_host.h
include/common/: zbxtypes.h
sass/stylesheets/sass/: screen.scss
src/go/: .golangci.yml  Makefile.am
src/libs/: Makefile.am
src/libs/zbxalgo/: binaryheap.c  evaluate.c  hashmap.c  hashset.c  linked_list.c  prediction.c  (+2 more)
src/libs/zbxdbhigh/: Makefile.am  db.c  event.c  export.c  graph_linking.c  host.c  lld_macro.c  lld_override.c  maintenance.c  proxy.c  template_item.c  trigger.c  trigger_dep_linking.c  trigger_linking.c
src/libs/zbxrtc/: Makefile.am  rtc_client.c
src/zabbix_agent/: Makefile.am  active.c  active.h  eventlog.c  listener.c  listener.h  zabbix_agentd.c  zbxconf.c
src/zabbix_get/: Makefile.am
src/zabbix_js/: Makefile.am  zabbix_js.c
src/zabbix_proxy/: Makefile.am  proxy.c
src/zabbix_sender/: zabbix_sender.c
src/zabbix_server/: Makefile.am  actions.c  actions.h  events.c  operations.c  operations.h  postinit.c  server.c
src/zabbix_server/poller/: Makefile.am  checks_db.c  checks_db.h  checks_external.c  checks_external.h  checks_internal.c  checks_internal.h  checks_java.c  checks_java.h  checks_simple_vmware.c  checks_snmp.c  checks_snmp.h  poller.c  poller.h
src/zabbix_server/preprocessor/: Makefile.am  item_preproc.c  item_preproc.h  pp_cache.c  pp_cache.h  pp_error.c  pp_error.h  pp_execute.c  pp_execute.h  pp_history.c  pp_history.h  pp_item.c  pp_item.h  pp_log.c  pp_log.h  pp_manager.c  pp_queue.c  pp_queue.h  pp_task.c  pp_task.h  pp_worker.c  pp_worker.h  pp_xml.c  pp_xml.h  preproc_manager.c  preproc_worker.c
src/zabbix_server/trapper/: Makefile.am  active.c  nodecommand.c  nodecommand.h  proxyconfig.c  proxyconfig.h  proxydata.c  proxydata.h  trapper.c  trapper.h  trapper_expressions_evaluate.c  trapper_item_test.c  trapper_item_test.h  trapper_preproc.c  trapper_proxy.c  trapper_request.h  trapper_server.c
tests/: zbxmockdb.c  zbxmocktest.c  zbxmockutil.c
ui/: chart5.php  composer.json  host_discovery.php  httpconf.php  index.php  index_http.php  index_sso.php  jsLoader.php  trigger_prototypes.php  triggers.php
ui/conf/: maintenance.inc.php  overrides.conf.php.example
ui/include/: events.inc.php  hosts.inc.php  html.inc.php  httptest.inc.php  js.inc.php  maps.inc.php  perm.inc.php  validate.inc.php
ui/js/: class.cmap.js  class.dashboard.js  class.overlay.js  class.tab-indicators.js  common.js  component.z-tab.js  component.z-tabs.js  functions.js  init.js  main.js  menupopup.js  textareaflexible.js
(+605 files in other folders)
