## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libpreprocessor.a

libpreprocessor_a_SOURCES = \
	item_preproc.c \
	item_preproc.h \
	preproc_history.c \
	preproc_history.h \
	preproc_manager.c \
	preproc_manager.h \
	preproc_worker.c \
	preproc_worker.h \
	preprocessing.c \
	preprocessing.h \
	preproc_cache.c \
	pp_manager.c \
	pp_task.c \
	pp_task.h \
	pp_worker.c \
	pp_worker.h \
	pp_item.c \
	pp_item.h \
	pp_queue.c \
	pp_queue.h \
	pp_cache.c \
	pp_cache.h \
	pp_log.c \
	pp_log.h

libpreprocessor_a_CFLAGS = \
	 $(LIBXML2_CFLAGS)
