## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libzbxtrapper.a libzbxtrapper_server.a libzbxtrapper_proxy.a

libzbxtrapper_a_SOURCES = \
	active.c \
	proxyconfig.c \
	trapper_auth.c \
	nodecommand.c \
	proxydata.c \
	trapper_preproc.c \
	trapper_expressions_evaluate.c \
	trapper_item_test.c \
	trapper.c

libzbxtrapper_server_a_SOURCES = \
	trapper_server.c

libzbxtrapper_proxy_a_SOURCES = \
	trapper_proxy.c
